@@ -33,4 +33,5 @@ BUGFIXES FROM BUGZILLA:
 021 ==> 375357 - No video preview.
 022 ==> 375390 - "Set as Tag Thumbnail" in Tag View doesn't work.
 023 ==> 375110 - Open with doesn't remember application association.
-024 ==> 
+024 ==> 328457 - BQM Watermark tool : doesn't apply zero margins.
+025 ==> 
